# SMC_Quadrotor

./: .gitignore  CMakeLists.txt  PARAMETER_TUNING_GUIDE.md  README.md  TRAJECTORY_GUIDE.md  package.xml  postprocess_trajectory.py  visualize_trajectory.py
include/smc_quadrotor/: smc_controller.h  trajectory_generator.h
launch/: custom_trajectory_example.launch  quadrotor_control.launch  trajectory_from_file.launch
src/: quadrotor_control.cpp  smc_controller.cpp  trajectory_generator.cpp
trajectories/: lawnmower.yaml  spiral.csv  square_simple.csv
