<?xml version="1.0"?>
<package format="2">
  <name>smc_quadrotor_cpp</name>
  <version>1.0.0</version>
  <description>Sliding Mode Control for Crazyflie 2.0 Quadrotor</description>

  <maintainer email="maintainer@example.com">SMC Quadrotor</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- ROS dependencies -->
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>mav_msgs</depend>
  <depend>tf</depend>
  
  <!-- System dependencies -->
  <depend>eigen</depend>

  <export>
  </export>
</package>
